Refactor : update refactor sonar